# yolov5_TRT_C-_python_api

./: CMakeLists.txt  README.md  backup  yololayer.h  yolov5.cpp  yolov5_lib.cpp  yolov5_lib.cu  yolov5_lib.h
python/: camera.py  detect.py  readme  setup.py  test.py  test_live.py  tools.py  yolov5_trt_py_module.cpp
python/TRTYolov5.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
